Deleted the overflow: hidden property; finally solved the shift between normal 's and dropdowns issue!

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,6 @@
   /* Dropdown container - needed to position the dropdown content */
   .dropdown {
     display: inline-block;
-    overflow: hidden;
   }
   
   /* Style the dropdown button to fit inside the topnav */
